--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Đăng nhập - KAMOI</title>
+  <title>Đăng nhập </title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" th:href="@{/css/login.css}">
@@ -35,7 +35,7 @@
         <div class="login-form w-100">
           <div class="text-center mb-4">
             <img src="/images/logo.png" alt="Logo Kamoi" class="brand-logo">
-            <h3 class="fw-bold">Đăng nhập vào KAMOI</h3>
+            <h3 class="fw-bold">Đăng nhập vào Phòng khám</h3>
           </div>
 
           <form th:action="@{/login}" method="post">
