--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -34,7 +34,7 @@
                 <div class="login-form w-100">
                     <div class="text-center mb-4">
                         <img src="/images/logo.png" alt="Logo Kamoi" class="brand-logo">
-                        <h3 class="fw-bold">Tạo tài khoản KAMOI</h3>
+                        <h3 class="fw-bold">Tạo tài khoản Phòng khám</h3>
                     </div>
 
                     <form th:action="@{/register}" method="post">
